[project]
name = "top-secret"
version = "0.0.1"
description = "Encodes `dict[str, str]` objects into an obfuscated string. Read README.md for more information."
requires-python = ">=3.10"
dependencies = [ "typing_extensions>=4.11.0",]
readme = "README.md"
keywords = [ "encode", "decode", "obfuscate", "deobfuscate", "dictionary", "string", "json", "jsonify", "dejsonify",]
classifiers = [ "Development Status :: 5 - Production/Stable", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14", "Topic :: Software Development :: Libraries :: Python Modules", "Topic :: Utilities", "Typing :: Typed",]
[[project.authors]]
name = "Isaac Dunn"
email = "30stu225@lexingtonma.org"

[build-system]
requires = [ "setuptools>=61.0.0", "wheel>=0.43.0",]
build-backend = "setuptools.build_meta"

[project.license]
file = "LICENSE.txt"

[project.urls]
Homepage = "https://github.com/AirbusFan404/top-secret"
Documentation = "https://github.com/AirbusFan404/top-secret/blob/main/README.md"
Issues = "https://github.com/AirbusFan404/top-secret/issues"
Source = "https://github.com/AirbusFan404/top-secret.git"
Repository = "https://github.com/AirbusFan404/top-secret.git"
Changelog = "https://github.com/AirbusFan404/top-secret/commits/main"
Contact = "https://github.com/AirbusFan404/top-secret/issues"

[tool.setuptools]
py-modules = [ "top_secret",]
